--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flexi_func"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Ahmad Hamdi"]
 description = """
@@ -11,7 +11,6 @@ These macros are crafted to simplify and enhance the way you write synchronous a
 categories = ["asynchronous", "development-tools::procedural-macro-helpers", "parsing", "rust-patterns", "network-programming"]
 license = "MIT"
 repository = "https://github.com/theHamdiz/flexi_func"
-license-file = "LICENSE.md"
 readme = "README.md"
 
 
@@ -19,6 +18,6 @@ readme = "README.md"
 syn = { version = "1.0.109", features = ["full"] }
 quote = "1.0.9"
 proc-macro2 = "1.0.27"
-
+flexi_func_declarative = { path = "../flexi_func_declarative" }
 [lib]
 proc-macro = true
